[project]
name = "pythonproject10-1"
version = "0.1.0"
description = ""
authors = [
    {name = "Pavel",email = "p.timofeev2013@yandex.ru"}
]
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "pythonproject10"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
